--- a/HotelManagementBackEnd/appsettings.json
+++ b/HotelManagementBackEnd/appsettings.json
@@ -5,7 +5,7 @@
     "Audience": "HotelManagementUsers"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-2A45EK0;Database=HotelManagementDb;password=vicuong0110;Trusted_Connection=True;"
+    "DefaultConnection": "Database=HotelManagementDb;Server=DESKTOP-T4B1EA0;User Id=sa;Password=123;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
